<resources>
    <string name="app_name">쓱마트 쇼핑</string>
    <string name="tab_text_1">올때 쓱</string>
    <string name="tab_text_2">장바구니</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_basket">Basket</string>
    <string name="ssgmart_text">쓱마트</string>
    <string name="shopping_text">쇼핑</string>
    <string name="close">닫기</string>
    <string name="qr_code_title">POS에 읽혀주세요</string>
    <string name="emart_search_text">이마트24 찾기</string>
    <string name="label_btn_find">검색</string>
    <string name="login_EditText_txt">ID를 입력하세요</string>
    <string name="pwd_EditText_txt">패스워드를 입력하세요</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">NEXT</string>
    <string name="create_QR_text">QR 코드 생성</string>
    <string name="share_basket_text">공유하기</string>
    <string name="SSGMart_shop_txt">쓱마트 쇼핑</string>
    <string name="normal_price_txt">정상가</string>
    <string name="valid_txt_txt">유통기한</string>
    <string name="validity_txt_txt">유효기한</string>
    <string name="discountPrice_txt">할인가</string>
    <string name="sharedBasket">공유 장바구니</string>
    <string name="shared_store_txt">지 점</string>
    <string name="shared_friends_txt">친구에게 공유하기</string>
    <string name="delete_txt">삭제하기</string>
    <string name="detail_txt">상세보기</string>


</resources>
