<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgRowBackground"
        android:padding="10dp">

        <ImageView
            android:id="@+id/basket_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ssg_txt_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/basket_icon"
            android:text="@string/text_basket"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/thumbnail"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:hint="제품명"
            android:textStyle="bold"
            android:textColor="@color/itemName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/normal_price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="5dp"
            android:text="정상가"
            android:layout_toRightOf="@+id/thumbnail"
            android:textColor="@color/welcome_up_background"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/normal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="5dp"
            android:hint="@string/normal_price_txt"
            android:layout_toRightOf="@+id/normal_price_txt"
            android:layout_marginStart="10dp"
            android:textColor="@color/Description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/valid_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/normal_price"
            android:layout_marginTop="5dp"
            android:text="@string/valid_txt_txt"
            android:layout_toRightOf="@+id/thumbnail"
            android:textColor="@color/welcome_up_background"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/normal_price"
            android:layout_marginTop="5dp"
            android:hint="유통기한"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/valid_txt"
            android:textColor="@color/Description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/stock_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valid"
            android:layout_marginTop="5dp"
            android:text="재고"
            android:layout_toRightOf="@+id/thumbnail"
            android:textColor="@color/welcome_up_background"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valid"
            android:layout_marginTop="5dp"
            android:hint="재고"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/stock_txt"
            android:textColor="@color/Description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/discountPrice_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valid"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_toLeftOf="@+id/discountPrice"
            android:text="@string/discountPrice_txt"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/discountPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valid"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:hint="할인가"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </RelativeLayout>
    s
</FrameLayout>