<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgRowBackground"
            android:padding="0dp">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_delete_white_24dp" />

            <TextView
                android:id="@+id/delete_icon_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delete_icon"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/delete_txt"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_zoom_in_black_24dp" />


            <TextView
                android:id="@+id/detail_icon_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_icon"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/detail_txt"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="0dp">

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_img"
                android:layout_alignParentStart="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="user_name"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/total_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/user_img"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:text="총 가격"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/user_img"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:hint="총 가격"
                android:textColor="@color/itemName"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/arrival_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_price"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/user_img"
                android:text="도착시간"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_price"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/user_img"
                android:hint="도착시간"
                android:textColor="@color/Description"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/validity_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/arrival_time"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/user_img"
                android:text="@string/validity_txt_txt"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/arrival_time"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/user_img"
                android:hint="유효기간"
                android:textColor="@color/Description"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/stock_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/validity"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/user_img"
                android:text="제품수량"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/validity"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/user_img"
                android:hint="제품수량"
                android:textColor="@color/Description"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/store_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stock_txt"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/user_img"
                android:text="@string/shared_store_txt"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stock_txt"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/user_img"
                android:hint="@string/shared_store_txt"
                android:textColor="@color/welcome_up_background"
                android:textSize="15sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>